feat: implement round robin match logic & enable team logo upload
